--- a/src/main/res/layout/activity_sign_up.xml
+++ b/src/main/res/layout/activity_sign_up.xml
@@ -86,20 +86,6 @@
             android:layout_alignEnd="@+id/etFName" />
 
         <EditText
-            android:hint="Date Of Birth [ DD-MM-YYYY ]"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="phone"
-            android:ems="10"
-            android:id="@+id/etDOB"
-            android:layout_below="@+id/etLName"
-            android:layout_alignLeft="@+id/etLName"
-            android:layout_alignStart="@+id/etLName"
-            android:layout_marginTop="35dp"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
-
-        <EditText
             android:hint="Address 1 / Home"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -110,8 +96,8 @@
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
             android:layout_marginTop="35dp"
-            android:layout_alignLeft="@+id/etDOB"
-            android:layout_alignStart="@+id/etDOB" />
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
 
         <EditText
             android:hint="Address 2 / Work"
@@ -166,7 +152,7 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="Blood Group :"
             android:id="@+id/tvBG"
-            android:layout_below="@+id/etDOB"
+            android:layout_below="@+id/tvDOB"
             android:layout_marginTop="35dp"
             android:layout_marginLeft="5dp"/>
         <Spinner
@@ -177,7 +163,7 @@
             android:layout_alignParentEnd="true"
             android:layout_alignLeft="@+id/btnNext"
             android:layout_alignStart="@+id/btnNext"
-            android:layout_below="@+id/etDOB"
+            android:layout_below="@+id/tvDOB"
             android:spinnerMode="dropdown"
             android:layout_marginTop="30dp"/>
         <EditText
@@ -193,6 +179,30 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Date of Birth :"
+            android:layout_below="@id/etLName"
+            android:layout_marginTop="35dp"
+            android:id="@+id/tvDOB"
+            android:layout_marginLeft="5dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="date"
+            android:ems="10"
+            android:id="@+id/etDOB"
+            android:layout_below="@id/etLName"
+            android:layout_marginTop="25dp"
+            android:layout_marginLeft="5dp"
+            android:layout_toRightOf="@+id/tvBG"
+            android:layout_alignRight="@+id/spinBG"/>
 
 
     </RelativeLayout>
