--- a/src/main/res/layout/content_profile.xml
+++ b/src/main/res/layout/content_profile.xml
@@ -7,7 +7,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/activity_welcome" tools:context="in.rakhtsavelives.app.WelcomeActivity">
+    tools:showIn="@layout/activity_profile" tools:context=".ProfileActivity">
 
     <TextView
         android:layout_width="wrap_content"
@@ -34,8 +34,42 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Medium Text"
         android:id="@+id/tvName"
+        android:layout_alignTop="@+id/ibProfile"
+        android:layout_alignRight="@+id/logout"
+        android:layout_alignEnd="@+id/logout" />
+
+    <ImageButton
+        android:layout_width="75dp"
+        android:layout_height="75dp"
+        android:id="@+id/ibProfile"
+        android:src="@drawable/icon_blood_64"
+        android:background="@drawable/profile_button"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/black"
+        android:id="@+id/line1"
+        android:layout_below="@+id/tvBloodGroup"
+        android:layout_toLeftOf="@+id/ibProfile"
+        android:layout_toStartOf="@+id/ibProfile"
+        android:layout_marginTop="13dp" />
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="A+"
+        android:id="@+id/tvBloodGroup"
+        android:textColor="#FFF"
+        android:textStyle="bold"
+        android:textSize="10dp"
+        android:background="@drawable/icon_blood_32"
+        android:gravity="center"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="27dp" />
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
