--- a/src/main/res/layout/activity_sign_up.xml
+++ b/src/main/res/layout/activity_sign_up.xml
@@ -151,7 +151,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="Blood Group :"
-            android:id="@+id/tvBloodGroup"
+            android:id="@+id/tvBG"
             android:layout_below="@+id/tvDOB"
             android:layout_marginTop="35dp"
             android:layout_marginLeft="5dp"/>
@@ -161,11 +161,11 @@
             android:id="@+id/spinBG"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
-            android:layout_alignLeft="@+id/btnNext"
-            android:layout_alignStart="@+id/btnNext"
             android:layout_below="@+id/tvDOB"
             android:spinnerMode="dropdown"
-            android:layout_marginTop="30dp"/>
+            android:layout_marginTop="30dp"
+            android:layout_toRightOf="@+id/tvBG"
+            android:layout_toEndOf="@+id/tvBG" />
         <EditText
             android:hint="Phone Number"
             android:layout_width="wrap_content"
@@ -173,7 +173,7 @@
             android:inputType="phone"
             android:ems="10"
             android:id="@+id/etPhone"
-            android:layout_below="@id/tvBloodGroup"
+            android:layout_below="@id/tvBG"
             android:layout_marginTop="35dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
@@ -202,7 +202,7 @@
             android:layout_below="@id/etLName"
             android:layout_marginTop="25dp"
             android:layout_marginLeft="5dp"
-            android:layout_toRightOf="@+id/tvBloodGroup"
+            android:layout_toRightOf="@+id/tvBG"
             android:layout_alignRight="@+id/spinBG"/>
 
         <ImageButton
